# eydii

./: CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SUPPORT.md
adapters/agno/: README.md  __init__.py  execute.py  pyproject.toml  tool.py
adapters/crewai/: README.md  __init__.py  execute.py  guardrail.py  hooks.py  pyproject.toml  tool.py
adapters/google-adk/: README.md  __init__.py  execute.py  pyproject.toml  tool.py
adapters/langchain/: README.md  __init__.py  execute.py  middleware.py  pyproject.toml
adapters/llamaindex/: README.md  __init__.py  event_handler.py  execute.py  pyproject.toml  tool_spec.py
adapters/mastra/: package.json
adapters/mastra/src/: index.ts
adapters/n8n/: package.json
adapters/n8n/src/: EydiiCredentials.ts  EydiiVerifyNode.ts  ForgeCredentials.ts  ForgeVerifyNode.ts  index.ts
adapters/openai/: README.md  __init__.py  execute.py  guardrail.py  pyproject.toml
adapters/openclaw/: package.json
adapters/openclaw/src/: index.ts
adapters/pydantic-ai/: README.md  __init__.py  execute.py  pyproject.toml  tool.py
sdks/javascript/: README.md  package.json  tsconfig.json
sdks/javascript/src/: client.ts  crypto.ts  http.ts  index.ts  types.ts
sdks/python/: README.md  pyproject.toml
sdks/python/veritera/: __init__.py  client.py
