[project]
name = "google-adk-forge"
version = "0.1.2"
description = "Forge Verify tools and callbacks for Google ADK — verify every agent action before execution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Veritera AI", email = "engineering@veritera.ai"}]
keywords = ["veritera", "forge", "google-adk", "vertex-ai", "verification", "ai-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "veritera>=0.2.0",
    "google-adk>=1.0.0",
]

[project.urls]
Homepage = "https://forge.veritera.ai"
Documentation = "https://forge.veritera.ai/docs"
Repository = "https://github.com/veritera-ai/google-adk-forge"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["forge_google_adk*", "google_adk_forge*"]
