[project]
name = "llama-index-tools-forge"
version = "0.2.1"
description = "Forge Verify + Execute tools for LlamaIndex — verify agent actions and track executions with cryptographic receipts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Veritera AI", email = "engineering@veritera.ai"}]
keywords = ["veritera", "forge", "llamaindex", "llama-index", "verification", "guardrail", "ai-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "veritera>=0.2.0",
    "llama-index-core>=0.11.0",
]

[project.urls]
Homepage = "https://forge.veritera.ai"
Documentation = "https://forge.veritera.ai/docs"
Repository = "https://github.com/veritera-ai/forge-llamaindex"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["forge_llamaindex*", "llama_index_tools_forge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
