[project]
name = "eydii-openai"
version = "0.2.0"
description = "EYDII + Execute middleware for OpenAI Agents SDK — verify tool calls and track executions with cryptographic receipts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Veritera AI", email = "engineering@veritera.ai"}]
keywords = ["veritera", "eydii", "openai", "agents", "guardrail", "verification", "ai-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "veritera>=0.2.0",
    "openai-agents>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://id.veritera.ai"
Documentation = "https://id.veritera.ai/docs"
Repository = "https://github.com/veritera-ai/eydii-openai"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["eydii_openai*"]
