[project]
name = "pydantic-ai-forge"
version = "0.1.2"
description = "Forge Verify tools and middleware for Pydantic AI — verify every agent action before execution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Veritera AI", email = "engineering@veritera.ai"}]
keywords = ["veritera", "forge", "pydantic-ai", "verification", "ai-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "veritera>=0.2.0",
    "pydantic-ai>=0.1.0",
]

[project.urls]
Homepage = "https://forge.veritera.ai"
Documentation = "https://forge.veritera.ai/docs"
Repository = "https://github.com/veritera-ai/pydantic-ai-forge"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["forge_pydantic_ai*", "pydantic_ai_forge*"]
