[project]
name = "veritera"
version = "0.3.1"
description = "Forge Verify + Execute SDK — Verify AI agent decisions and track executions with cryptographic receipts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Veritera AI", email = "engineering@veritera.ai"}]
keywords = ["veritera", "forge", "forge-verify", "ai", "verification", "agent"]
dependencies = [
    "httpx>=0.25.0",
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://forge.veritera.ai"
Documentation = "https://veriteraai.github.io/forge-python/"
Repository = "https://github.com/veritera-ai/forge-python"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["veritera*"]
